# GLA-CHATBOT-USING-LLM-LOCALLY-

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  rag.py  routes.py
data/: GLA_University_Data.md
scripts/: ingest.py
templates/: index.html
